Fix: image size on mobile; update todo

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,6 +43,10 @@ header button:hover {
   height: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 #display-container button {
   position: absolute;
   z-index: 20;
